[project]
name = "mcp-server-bedrock-image"
version = "0.1.0"
description = "MCP Server for Stability AI image generation on AWS Bedrock"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.0.0",
    "boto3>=1.35.0",
    "pydantic>=2.0.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
]

[project.scripts]
mcp-server-bedrock-image = "mcp_server_bedrock_image.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_bedrock_image"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
]
